--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "index.mjs",
     "index.js"
   ],
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "ajv": "^6.10.2",
+    "lodash.topath": "^4.5.2"
+  }
 }
